# destiny-web-rust

./: .gitignore  Cargo.toml  render.yaml
src/: firebase.rs  handlers.rs  main.rs  state.rs
src/components/: footer.rs  home.rs  layout.rs  leaderboard.rs  mod.rs  navbar.rs  profile.rs  staff.rs  styles.rs
static/: app.js  index.html  style.css
