[package]
name = "destiny-web-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
yup-oauth2 = "8.3"
tower-http = { version = "0.5", features = ["cors", "fs"] }
base64 = "0.21"

